--- a/demo.html
+++ b/demo.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <script>
+        alert()
+    </script>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://unpkg.com/vue-router@4"></script>
 
